# C_SDL-DRAW_PIXELS

./: CMakeLists.txt  Makefile  README.md  appStruct.c  functions.c  functionsApp.c  functionsScene.c  headerApp.h  headerNodes.h  headerScene.h  includes.h  main.c  nodeStruct.c
SDL/include/SDL2/: SDL_revision.h
SDL/lib/: SDL2.lib  SDL2main.lib
